docs-archive/apache-airflow-providers-amazon/9.28.0/_sources/_api/airflow/providers/amazon/aws/operators/s3_tables/index.rst.txt
airflow.providers.amazon.aws.operators.s3_tables
================================================

.. py:module:: airflow.providers.amazon.aws.operators.s3_tables

.. autoapi-nested-parse::

   Amazon S3 Tables operators.



Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.s3_tables.S3TablesCreateTableOperator
   airflow.providers.amazon.aws.operators.s3_tables.S3TablesDeleteTableOperator
   airflow.providers.amazon.aws.operators.s3_tables.S3TablesDeleteNamespaceOperator
   airflow.providers.amazon.aws.operators.s3_tables.S3TablesCreateTableBucketOperator
   airflow.providers.amazon.aws.operators.s3_tables.S3TablesDeleteTableBucketOperator
   airflow.providers.amazon.aws.operators.s3_tables.S3TablesCreateNamespaceOperator


Module Contents
---------------

.. py:class:: S3TablesCreateTableOperator(*, table_bucket_arn, namespace, table_name, format = 'ICEBERG', metadata = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Create a new table in an Amazon S3 Tables namespace.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3TablesCreateTableOperator`

   :param table_bucket_arn: The ARN of the table bucket to create the table in. (templated)
   :param namespace: The namespace to associate with the table. (templated)
   :param table_name: The name of the table. (templated)
   :param format: The table format. (templated) Currently only ``ICEBERG`` is supported.
   :param metadata: Optional Iceberg schema metadata. (templated)
       Example: ``{"iceberg": {"schema": {"fields": [{"name": "id", "type": "int", "required": True}]}}}``
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: aws_hook_class


   .. py:attribute:: table_bucket_arn


   .. py:attribute:: namespace


   .. py:attribute:: table_name


   .. py:attribute:: format
      :value: 'ICEBERG'



   .. py:attribute:: metadata
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3TablesDeleteTableOperator(*, table_bucket_arn, namespace, table_name, version_token = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`\ ]


   Delete a table from an Amazon S3 Tables namespace.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3TablesDeleteTableOperator`

   :param table_bucket_arn: The ARN of the table bucket containing the table. (templated)
   :param namespace: The namespace of the table. (templated)
   :param table_name: The name of the table to delete. (templated)
   :param version_token: Optional version token for optimistic concurrency. (templated)


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: aws_hook_class


   .. py:attribute:: table_bucket_arn


   .. py:attribute:: namespace


   .. py:attribute:: table_name


   .. py:attribute:: version_token
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3TablesDeleteNamespaceOperator(*, table_bucket_arn, namespace, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.s3_tables.S3TablesHook`\ ]


   Delete a namespace from an Amazon S3 Tables table bucket.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3TablesDeleteNamespaceOperator`

   :param table_bucket_arn: The ARN of the table bucket. (templated)
   :param namespace: The namespace to delete. (templated)


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: aws_hook_class


   .. py:attribute:: table_bucket_arn


   .. py:attribute:: namespace


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3TablesCreateTableBucketOperator(*, table_bucket_name, encryption_configuration = None, tags = None, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.s3_tables.S3TablesHook`\ ]


   Create an Amazon S3 Tables table bucket.

   A table bucket is the top-level container for S3 Tables namespaces and tables.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3TablesCreateTableBucketOperator`

   :param table_bucket_name: The name of the table bucket. (templated)
   :param encryption_configuration: Optional encryption configuration dict with
       ``sseAlgorithm`` and optional ``kmsKeyArn``. (templated)
   :param if_exists: Behavior when a table bucket with the same name already exists.
       ``"fail"`` raises an error, ``"skip"`` returns the existing bucket ARN.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_fields_renderers


   .. py:attribute:: aws_hook_class


   .. py:attribute:: table_bucket_name


   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: tags
      :value: None



   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3TablesDeleteTableBucketOperator(*, table_bucket_arn, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.s3_tables.S3TablesHook`\ ]


   Delete an Amazon S3 Tables table bucket.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3TablesDeleteTableBucketOperator`

   :param table_bucket_arn: The ARN of the table bucket to delete. (templated)


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: aws_hook_class


   .. py:attribute:: table_bucket_arn


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: S3TablesCreateNamespaceOperator(*, table_bucket_arn, namespace, if_exists = 'skip', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.s3_tables.S3TablesHook`\ ]


   Create a namespace in an Amazon S3 Tables table bucket.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3TablesCreateNamespaceOperator`

   :param table_bucket_arn: The ARN of the table bucket. (templated)
   :param namespace: The namespace name to create. (templated)
   :param if_exists: Behavior when the namespace already exists.
       ``"fail"`` raises an error, ``"skip"`` logs and returns.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: aws_hook_class


   .. py:attribute:: table_bucket_arn


   .. py:attribute:: namespace


   .. py:attribute:: if_exists
      :value: 'skip'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



